galary alignment is corrected

--- a/src/style.css
+++ b/src/style.css
@@ -238,7 +238,6 @@
     .row {
         background: none !important;
 
-        gap: 30px;
     }
     .card-text {
         text-align: justify;
@@ -246,13 +245,12 @@
 }
 @media (max-width: 1240px) {
     .row {
-        gap: 30px;
+
     }
 }
 @media only screen and (min-width: 940px) and (max-width: 1990px) {
     .Achivement .row,
     .Gallery .row {
-        gap: 30px;
         flex-wrap: wrap !important;
         align-items: center !important;
     }
